[package]
name = "coral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-arena = "2.2.1"

logos = "0.13.0"

clap = "4.3.12"

thiserror = "1.0.43"
miette = {version = "5.10.0", features = ["fancy"]}
